fixed bug in shopping cart update (overload of data), set db password and pw to EVs

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@
 .shop-buttons{
     text-decoration:none;
     color:inherit;
+    min-height: 36px;
     /*padding:0 5px;*/
     /*font-size:18px;*/
 }
@@ -87,4 +88,7 @@
 }
 .wish-delete,.wish-buy{
     display:inline-block;
+}
+.cart-price{
+    font-size:18px;
 }
